<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_basex2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_uit_logo"
        android:layout_width="@dimen/image_base"
        android:layout_height="@dimen/image_base"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_basex2"
        android:src="@drawable/ic_anh"
        android:contentDescription="UIT Logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/margin_base"
            android:text="@string/from_xml"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/margin_base"
            android:text="@string/from_code"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow>
                <Button
                    android:id="@+id/btn_fade_in_xml"
                    android:text="@string/fade_in" />
                <Button
                    android:id="@+id/btn_fade_in_code"
                    android:text="@string/fade_in" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btn_fade_out_xml"
                    android:text="@string/fade_out" />
                <Button
                    android:id="@+id/btn_fade_out_code"
                    android:text="@string/fade_out" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btn_blink_xml"
                    android:text="@string/blink" />
                <Button
                    android:id="@+id/btn_blink_code"
                    android:text="@string/blink" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btn_zoom_in_xml"
                    android:text="@string/zoom_in" />
                <Button
                    android:id="@+id/btn_zoom_in_code"
                    android:text="@string/zoom_in" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btn_zoom_out_xml"
                    android:text="@string/zoom_out" />
                <Button
                    android:id="@+id/btn_zoom_out_code"
                    android:text="@string/zoom_out" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btn_rotate_xml"
                    android:text="@string/rotate" />
                <Button
                    android:id="@+id/btn_rotate_code"
                    android:text="@string/rotate" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btn_move_xml"
                    android:text="@string/move" />
                <Button
                    android:id="@+id/btn_move_code"
                    android:text="@string/move" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btn_slide_up_xml"
                    android:text="@string/slide_up" />
                <Button
                    android:id="@+id/btn_slide_up_code"
                    android:text="@string/slide_up" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btn_bounce_xml"
                    android:text="@string/bounce" />
                <Button
                    android:id="@+id/btn_bounce_code"
                    android:text="@string/bounce" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btn_combine_xml"
                    android:text="@string/combine" />
                <Button
                    android:id="@+id/btn_combine_code"
                    android:text="@string/combine" />
            </TableRow>

        </TableLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_open_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_basex2"
        android:text="OPEN VIEW PAGER (BÀI 4)" />
</LinearLayout>